# Hedge-v3-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.template.toml
src/: cli.rs  main.rs
src/command/: app.rs  apply.rs  import.rs  mod.rs  server.rs  source_data.rs  tool.rs
src/config/: mod.rs
src/module/: bulk.rs  channel.rs  config.rs  connect.rs  import.rs  local_data.rs  mod.rs  server.rs  source_data.rs
src/module/api/: bulk.rs  mod.rs  setting.rs  source_data.rs
src/module/download/: mod.rs  sankakucomplex.rs
src/utils/: error.rs
