[package]
name = "hedge_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
chrono = { version = "0.4.26" }
serde = { version = "1.0.166", features = ["derive"] }
serde_yaml = { version = "0.9.22"}
toml = { version = "0.7.5" }