[package]
name = "hedge_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
chrono = { version = "0.4.26" }
serde = { version = "1.0.166", features = ["derive"] }
serde_json = { version = "1.0.100" }
serde_yaml = { version = "0.9.22" }
toml = { version = "0.7.5" }
home = { version = "0.5.5" }
reqwest = { version = "0.11.18" }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
async-std = { version = "1.12.0" }